task for deleting inforamtion is done and adding a animation after successfully deleting details

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,8 +2,6 @@
   position: absolute;
   background-color: rgba(0,0,0,0.1);
 }
-
-lord-icon:hover{
-  color: red;
-
+.custom2{
+  background-color: rgba(0, 0, 0, 0.5);
 }
